--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,34 @@
+/* images*/
+
+.logo{
+    width:50px;
+    height: 44px;
+}
+
+.library-card img{
+    max-width: 400px;
+}
+
+.library-card p{
+    margin-top: 4px;
+}
+.title-card{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/* anchor tags */
+
+.library-card a{
+    text-decoration: none;
+    background-color: blue;
+    color:white;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+/* label tag */
+
 span.label{
     color:white;
     border-radius: 5px;
